Platform 1.28

* Configuration

  Configuration objects are no longer treated as singletons, in order
  to avoid action at a distance.

  We deprecated ConfigurationFactory.registerConfigurationClasses(Module)

* HttpServer

  We created the http-server.stop-timeout configuration option to allow
  changing the amount of time upon server shutdown that requests are allowed
  to complete before being interrupted.

  We created new defaults for existing configuration options:

  http-server.https.keystore.path=etc/keystore.jks
  http-server.https.keystore.key=keystore

* Launcher

  The amount of time the launcher will wait for a server to gracefully stop
  before sending it a SIGKILL is now configurable through the
  launcher.stop-timeout-seconds system property. The default is "60".

* We added a "ci" Maven profile that builds Javadoc.

* We removed the dbpool sub-project.

* Library Upgrades

  - Jetty to 9.2.13
  - Jersey to 2.22
  - slf4j to 1.7.12
  - joda-time to 2.9 (Fixes a compatibility issue with Java 8u60.)
  - testng to 6.9.6
  - Jacoco to 0.7.4

Platform 1.27

* TestingResponse

  We created a new builder for TestingResponse and deprecated most of
  the previous methods of creating TestingResponse. For example:

      TestingResponse.mockResponse()
          .header("X-Foo", "bar")
          .jsonBody(object)
          .build();

* Skeleton server and Sample server

  The Maven archetypes now supply a gitignore file. This file should be
  renamed to ".gitignore" (it is impractical to get an archetype to create
  a file named ".gitignore").

  We have updated the skeleton and sample servers to reflect current practice.

  - The skeleton server Main class includes code to override the default value
    of http-server.http.port.
  - TestServer initializes and tears down the HttpClient once for the class.
  - Resource classes are tested only through TestServer.
  - TestServer no longer uses resource files to supply JSON.